Create Probability of Detection plot for GHGSat
Required me to add a new column to clean data indicating if the operator kept the overpass or not ("OperatorKeep"). I now use this as a filter in the data manipulation methods (apply_qc_filter, the method that merges operator report and operator meter data and applies Stanford's QC filter.

--- a/03_parity_plots.ipynb
+++ b/03_parity_plots.ipynb
@@ -72,18 +72,18 @@
       "190         190  GHGSat-AV      1                  191.0   2022-11-07   \n",
       "191         191  GHGSat-AV      1                  192.0   2022-11-07   \n",
       "\n",
-      "    TimestampUTC  QuantifiedPlume  FacilityEmissionRate  \\\n",
-      "0       17:03:54                1                 151.0   \n",
-      "1       17:06:59                1                 129.0   \n",
-      "2       17:10:46                1                 209.0   \n",
-      "3       17:14:04                1                  88.0   \n",
-      "4       17:17:09                1                 108.0   \n",
-      "..           ...              ...                   ...   \n",
-      "187     21:52:46                1                  17.0   \n",
-      "188     21:57:17                1                  11.0   \n",
-      "189     22:01:28                1                   NaN   \n",
-      "190     22:05:48                1                   NaN   \n",
-      "191     22:09:36                1                   NaN   \n",
+      "    TimestampUTC  Detected  QuantifiedPlume  FacilityEmissionRate  \\\n",
+      "0       17:03:54      True             True                 151.0   \n",
+      "1       17:06:59      True             True                 129.0   \n",
+      "2       17:10:46      True             True                 209.0   \n",
+      "3       17:14:04      True             True                  88.0   \n",
+      "4       17:17:09      True             True                 108.0   \n",
+      "..           ...       ...              ...                   ...   \n",
+      "187     21:52:46      True             True                  17.0   \n",
+      "188     21:57:17      True             True                  11.0   \n",
+      "189     22:01:28     False             True                   NaN   \n",
+      "190     22:05:48     False             True                   NaN   \n",
+      "191     22:09:36     False             True                   NaN   \n",
       "\n",
       "     FacilityEmissionRateUpper  FacilityEmissionRateLower UncertaintyType  \\\n",
       "0                        204.0                       98.0         1-sigma   \n",
@@ -98,20 +98,20 @@
       "190                        NaN                        NaN         1-sigma   \n",
       "191                        NaN                        NaN         1-sigma   \n",
       "\n",
-      "     OperatorWindspeed QCFlag  \n",
-      "0                 1.60   GH-1  \n",
-      "1                 1.57   GH-1  \n",
-      "2                 1.57   GH-1  \n",
-      "3                 1.54   GH-1  \n",
-      "4                 1.53   GH-1  \n",
-      "..                 ...    ...  \n",
-      "187               3.05   GH-1  \n",
-      "188               3.07   GH-1  \n",
-      "189                NaN   GH-1  \n",
-      "190                NaN   GH-1  \n",
-      "191                NaN   GH-1  \n",
+      "     OperatorWindspeed QCFlag  OperatorKeep  \n",
+      "0                 1.60   GH-1          True  \n",
+      "1                 1.57   GH-1          True  \n",
+      "2                 1.57   GH-1          True  \n",
+      "3                 1.54   GH-1          True  \n",
+      "4                 1.53   GH-1          True  \n",
+      "..                 ...    ...           ...  \n",
+      "187               3.05   GH-1          True  \n",
+      "188               3.07   GH-1          True  \n",
+      "189                NaN   GH-1          True  \n",
+      "190                NaN   GH-1          True  \n",
+      "191                NaN   GH-1          True  \n",
       "\n",
-      "[192 rows x 13 columns]\n"
+      "[192 rows x 15 columns]\n"
      ]
     }
    ],
