Add Carbon Mapper Stage 3 data cleaning and parity plot

--- a/02_data_cleaning.ipynb
+++ b/02_data_cleaning.ipynb
@@ -71,6 +71,7 @@
     "#### Submission details\n",
     "- Stage 1 submitted on 2023-01-03\n",
     "- Stage 2 submitted on 2023-02-13\n",
+    "- Stage 3 submitted 2023-02-28\n",
     "\n",
     "#### QC Indicator:\n",
     "Column: \"Good Quality (Y/N)\"\n",
@@ -85,13 +86,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Carbon Mapper Stage 1\n",
+    "# Load Carbon Mapper Stage 1\n",
     "cm_1_path = pathlib.PurePath('00_raw_data', 'CM_Stage1_submitted-2023-01-03.xlsx')\n",
     "cm_1 = pd.read_excel(cm_1_path, sheet_name='Survey Summary')\n",
     "\n",
-    "# Carbon Mapper Stage 2\n",
+    "# Load Carbon Mapper Stage 2\n",
     "cm_2_path = pathlib.PurePath('00_raw_data', 'CM_Stage2_submitted-2023-02-13.xlsx')\n",
-    "cm_2 = pd.read_excel(cm_2_path, sheet_name='Survey Summary')\n"
+    "cm_2 = pd.read_excel(cm_2_path, sheet_name='Survey Summary')\n",
+    "\n",
+    "# Load Carbon Mapper Stage 3\n",
+    "cm_3_path = pathlib.PurePath('00_raw_data', 'CM_Stage3_submitted-2023-02-28.xlsx')\n",
+    "cm_3 = pd.read_excel(cm_3_path, sheet_name='Survey Summary')\n"
    ]
   },
   {
@@ -127,17 +132,22 @@
     "# Carbon Mapper conducted 121 overpasses\n",
     "total_overpass = 121\n",
     "\n",
-    "# Import Stage 1 data\n",
+    "# Clean Stage 1 data\n",
     "stage = 1\n",
     "cm_1_clean = clean_cm(cm_report=cm_1, cm_overpasses=total_overpass, cm_stage=stage)\n",
     "\n",
-    "# Import Stage 2 data\n",
+    "# Clean Stage 2 data\n",
     "stage = 2\n",
     "cm_2_clean = clean_cm(cm_report=cm_2, cm_overpasses=total_overpass, cm_stage=stage)\n",
     "\n",
+    "# Clean stage 3\n",
+    "stage = 3\n",
+    "cm_3_clean = clean_cm(cm_report=cm_3, cm_overpasses=total_overpass, cm_stage=stage)\n",
+    "\n",
     "# Save data\n",
     "cm_1_clean.to_csv(pathlib.PurePath('01_clean_data', 'cm_1_clean.csv'))\n",
-    "cm_2_clean.to_csv(pathlib.PurePath('01_clean_data', 'cm_2_clean.csv'))\n"
+    "cm_2_clean.to_csv(pathlib.PurePath('01_clean_data', 'cm_2_clean.csv'))\n",
+    "cm_3_clean.to_csv(pathlib.PurePath('01_clean_data', 'cm_3_clean.csv'))\n"
    ],
    "metadata": {
     "collapsed": false
