Make data frame for comparing QC values by operator and Stanford

--- a/04_probability_of_detection.ipynb
+++ b/04_probability_of_detection.ipynb
@@ -20,24 +20,14 @@
     "# Setup\n",
     "\n",
     "# Imports\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from data_manipulation_methods import load_clean_data, load_meter_data, apply_qc_filter\n",
+    "\n",
+    "from data_manipulation_methods import load_clean_data, load_meter_data\n",
     "from plot_methods import plot_detection_limit\n",
     "\n",
-    "from plot_methods import rand_jitter\n",
-    "\n",
     "# Load clean operator data\n",
-    "# format for naming: [operator]_stage\n",
-    "\n",
     "cm_1, cm_2, cm_3, ghg_1, ghg_2, kairos_1_ls23, kairos_1_ls25, kairos_2_ls23, kairos_2_ls25, kairos_3_ls23, kairos_3_ls25 = load_clean_data()\n",
     "\n",
     "# Load meter data\n",
-    "# cm_meter = metered data for Carbon Mapper overpasses\n",
-    "# ghg_meter = metered data for GHGSat overpasses\n",
-    "# kairos_meter = metered data for Kairos overpasses\n",
-    "\n",
     "cm_meter, ghg_meter, kairos_meter = load_meter_data()"
    ],
    "metadata": {
