Add QC analysis
Generate code to make a table summarizing effects of Stanford and Operator QC filters

--- a/02_data_cleaning.ipynb
+++ b/02_data_cleaning.ipynb
@@ -29,7 +29,7 @@
     "# Imports\n",
     "import pandas as pd\n",
     "import pathlib\n",
-    "from data_cleaning_methods import clean_cm, clean_ghgsat, clean_kairos\n"
+    "from methods_cleaning_reports import clean_cm, clean_ghgsat, clean_kairos\n"
    ],
    "metadata": {
     "collapsed": false
