--- a/04_probability_of_detection.ipynb
+++ b/04_probability_of_detection.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "# Imports\n",
     "\n",
-    "from data_manipulation_methods import load_clean_data, load_meter_data\n",
+    "from methods_data_cleaning import load_clean_data, load_meter_data\n",
     "from plot_methods import plot_detection_limit\n",
     "\n",
     "# Load clean operator data\n",
