--- a/05_qc_comparison.ipynb
+++ b/05_qc_comparison.ipynb
@@ -20,8 +20,8 @@
     "# Setup\n",
     "\n",
     "# Imports\n",
-    "import pandas as pd\n",
-    "from data_manipulation_methods import load_clean_data, load_meter_data\n",
+    "from methods_data_cleaning import load_clean_data, load_meter_data\n",
+    "from methods_analysis import evaluate_qc\n",
     "\n",
     "# Load clean operator data\n",
     "cm_1, cm_2, cm_3, ghg_1, ghg_2, kairos_1_ls23, kairos_1_ls25, kairos_2_ls23, kairos_2_ls25, kairos_3_ls23, kairos_3_ls25 = load_clean_data()\n",
@@ -35,91 +35,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     overpass_id  zero_release  non_zero_release  operator_kept  \\\n",
-      "0            1.0         False              True              1   \n",
-      "1            2.0         False              True              1   \n",
-      "2            3.0         False              True              1   \n",
-      "3            4.0         False              True              1   \n",
-      "4            5.0          True             False              1   \n",
-      "..           ...           ...               ...            ...   \n",
-      "116        117.0         False              True              1   \n",
-      "117        118.0          True             False              0   \n",
-      "118        119.0         False              True              1   \n",
-      "119        120.0         False              True              1   \n",
-      "120        121.0         False              True              1   \n",
-      "\n",
-      "     stanford_kept  operator_detected  release_rate_kgh  \\\n",
-      "0                1               True         10.968637   \n",
-      "1                1              False          7.314810   \n",
-      "2                1               True          8.666363   \n",
-      "3                1              False          4.461038   \n",
-      "4                1              False          0.000000   \n",
-      "..             ...                ...               ...   \n",
-      "116              1               True        322.945308   \n",
-      "117              0              False          0.000000   \n",
-      "118              1               True        476.519607   \n",
-      "119              1               True         43.075833   \n",
-      "120              1               True        532.386018   \n",
-      "\n",
-      "     operator_quantification  \n",
-      "0                  87.193762  \n",
-      "1                        NaN  \n",
-      "2                        NaN  \n",
-      "3                        NaN  \n",
-      "4                        NaN  \n",
-      "..                       ...  \n",
-      "116               443.587403  \n",
-      "117                      NaN  \n",
-      "118               573.856701  \n",
-      "119                76.023489  \n",
-      "120               669.420449  \n",
-      "\n",
-      "[121 rows x 8 columns]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/vp/7kbksk9n5bqdsc5w00b6k5zr0000gn/T/ipykernel_2822/1393490392.py:11: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
-      "  combined_df.release_rate_kgh = combined_df['Last 60s (kg/h) - from Stanford']\n"
-     ]
-    }
-   ],
+   "execution_count": 3,
+   "outputs": [],
    "source": [
-    "# Combine data\n",
+    "# Carbon Mapper QC\n",
     "\n",
-    "# Method inputs\n",
-    "operator_report = cm_1\n",
+    "operator = \"Carbon Mapper\"\n",
     "operator_meter = cm_meter\n",
     "\n",
-    "# Will begin method here\n",
-    "combined_df = operator_report.merge(operator_meter, on='PerformerExperimentID')\n",
+    "# Stage 1\n",
+    "stage = 1\n",
+    "operator_report = cm_1\n",
+    "cm_1_qc = evaluate_qc(operator, stage, operator_report, operator_meter)\n",
     "\n",
-    "# Make column with easier name for coding for now.\n",
-    "combined_df.release_rate_kgh = combined_df['Last 60s (kg/h) - from Stanford']\n",
+    "# Stage 2\n",
+    "stage = 2\n",
+    "operator_report = cm_2\n",
+    "cm_2_qc = evaluate_qc(operator, stage, operator_report, operator_meter)\n",
     "\n",
-    "# Philippine reports if we discard or not (discard = 1, keep = 0). Change this to have 1 if we keep, 0 if we discard\n",
-    "combined_df['stanford_kept'] =(1 - combined_df['QC: discard - from Stanford'])\n",
+    "# Stage 3\n",
+    "stage = 3\n",
+    "operator_report = cm_3\n",
+    "cm_3_qc = evaluate_qc(operator, stage, operator_report, operator_meter)\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "# GHGSat\n",
     "\n",
-    "# Make dataframe with all relevant info\n",
-    "operator_qc = pd.DataFrame()\n",
-    "operator_qc['overpass_id'] = combined_df.PerformerExperimentID\n",
-    "operator_qc['zero_release'] = combined_df.release_rate_kgh == 0\n",
-    "operator_qc['non_zero_release'] = combined_df.release_rate_kgh != 0  # True if we conducted a release\n",
-    "operator_qc['operator_kept'] = combined_df.stanford_kept\n",
-    "operator_qc['stanford_kept'] = combined_df.stanford_kept\n",
-    "operator_qc['operator_detected'] = combined_df.Detected\n",
-    "operator_qc['release_rate_kgh'] = combined_df.release_rate_kgh\n",
-    "operator_qc['operator_quantification'] = combined_df.FacilityEmissionRate\n",
+    "operator = \"GHGSat\"\n",
+    "operator_meter = ghg_meter\n",
     "\n",
-    "print(operator_qc)"
+    "# Stage 1\n",
+    "stage = 1\n",
+    "operator_report = ghg_1\n",
+    "ghg_1_qc = evaluate_qc(operator, stage, operator_report, operator_meter)\n",
+    "\n",
+    "# Stage 2\n",
+    "stage = 2\n",
+    "operator_report = ghg_2\n",
+    "ghg_2_qc = evaluate_qc(operator, stage, operator_report, operator_meter)\n",
+    "\n",
+    "# Stage 3\n",
+    "stage = 3\n",
+    "operator_report = ghg_2\n",
+    "ghg_3_qc = evaluate_qc(operator, stage, operator_report, operator_meter)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "# Kairos\n",
+    "\n",
+    "operator = \"Kairos LS23\"\n",
+    "operator_meter = kairos_meter\n",
+    "\n",
+    "# Stage 1\n",
+    "stage = 1\n",
+    "operator_report = kairos_1_ls23\n",
+    "kairos_1_ls23_qc = evaluate_qc(operator, stage, operator_report, operator_meter)\n",
+    "\n",
+    "# Stage 2\n",
+    "stage = 2\n",
+    "operator_report = kairos_2_ls23\n",
+    "kairos_2_ls23_qc = evaluate_qc(operator, stage, operator_report, operator_meter)\n",
+    "\n",
+    "# Stage 3\n",
+    "stage = 3\n",
+    "operator_report = kairos_3_ls23\n",
+    "kairos_3_ls23_qc = evaluate_qc(operator, stage, operator_report, operator_meter)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "# Kairos\n",
+    "\n",
+    "operator = \"Kairos LS25\"\n",
+    "operator_meter = kairos_meter\n",
+    "\n",
+    "# Stage 1\n",
+    "stage = 1\n",
+    "operator_report = kairos_1_ls25\n",
+    "kairos_1_ls25_qc = evaluate_qc(operator, stage, operator_report, operator_meter)\n",
+    "\n",
+    "# Stage 2\n",
+    "stage = 2\n",
+    "operator_report = kairos_2_ls25\n",
+    "kairos_2_ls25_qc = evaluate_qc(operator, stage, operator_report, operator_meter)\n",
+    "\n",
+    "# Stage 3\n",
+    "stage = 3\n",
+    "operator_report = kairos_3_ls25\n",
+    "kairos_3_ls25_qc = evaluate_qc(operator, stage, operator_report, operator_meter)"
    ],
    "metadata": {
     "collapsed": false
