Load daily meter data

--- a/03_parity_plots.ipynb
+++ b/03_parity_plots.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "# Imports\n",
     "from plot_methods import plot_parity, select_valid_overpasses\n",
-    "from data_manipulation_methods import load_clean_data, load_meter_data\n",
+    "from methods_data_cleaning import load_clean_data, load_meter_data\n",
     "\n",
     "# Load clean operator data\n",
     "# format for naming: [operator]_stage\n",
