--- a/testing_code.ipynb
+++ b/testing_code.ipynb
@@ -2,10 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   A         B         C         D\n",
+      "2000-01-01  0.393967  0.881135 -1.194058  0.765516\n",
+      "2000-01-02 -0.776094  0.054569 -2.626547  0.986929\n",
+      "2000-01-03  2.105480  0.551359  1.347437  0.728560\n",
+      "2000-01-04  1.055483 -2.869927 -1.555629 -0.876125\n",
+      "2000-01-05  1.678098 -1.006229 -0.569801  1.567946\n",
+      "2000-01-06 -1.606911 -2.126130  2.003817  0.004990\n",
+      "2000-01-07  1.275845 -1.610561 -2.148338 -0.284900\n",
+      "2000-01-08 -3.030475 -0.066971 -1.337047  1.618900\n",
+      "0.3939674704027692\n",
+      "                   A         B         C         D\n",
+      "2000-01-01  0.393967  0.881135 -1.194058  0.765516\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Playing around with pandas\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "dates = pd.date_range('1/1/2000', periods=8)\n",
+    "df = pd.DataFrame(np.random.randn(8, 4), index=dates, columns=['A', 'B', 'C', 'D'])\n",
+    "print(df)\n",
+    "test_num = df.loc['2000-01-01', 'A']\n",
+    "print(test_num)\n",
+    "test = df.loc[df.A == test_num]\n",
+    "print(test)"
+   ],
    "metadata": {
-    "collapsed": true
-   },
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -139,7 +177,10 @@
     "\n",
     "# Show plot\n",
     "plt.show()"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
