Generate function for creating overpass data frame with qc info for each overpass

--- a/05_qc_comparison.ipynb
+++ b/05_qc_comparison.ipynb
@@ -6,7 +6,7 @@
     "# Compare Stanford and Operator QC Criteria\n",
     "Code author: Sahar H. El Abbadi\n",
     "Date started: 2022-03-02\n",
-    "Date last edited: 2022-03-02"
+    "Date last edited: 2022-03-09"
    ],
    "metadata": {
     "collapsed": false
@@ -17,6 +17,7 @@
    "execution_count": 1,
    "outputs": [],
    "source": [
+    "# Setup\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pathlib\n",
@@ -25,7 +26,7 @@
     "\n",
     "# Imports\n",
     "from methods_data_cleaning import load_clean_data, load_meter_data\n",
-    "from methods_analysis import evaluate_qc\n",
+    "from methods_analysis import summarize_qc\n",
     "\n",
     "# Load clean operator data\n",
     "cm_1, cm_2, cm_3, ghg_1, ghg_2, kairos_1_ls23, kairos_1_ls25, kairos_2_ls23, kairos_2_ls25, kairos_3_ls23, kairos_3_ls25 = load_clean_data()\n",
@@ -50,17 +51,17 @@
     "# Stage 1\n",
     "stage = 1\n",
     "operator_report = cm_1\n",
-    "cm_1_qc = evaluate_qc(operator, stage, operator_report, operator_meter)\n",
+    "cm_1_qc = summarize_qc(operator, stage, operator_report, operator_meter)\n",
     "\n",
     "# Stage 2\n",
     "stage = 2\n",
     "operator_report = cm_2\n",
-    "cm_2_qc = evaluate_qc(operator, stage, operator_report, operator_meter)\n",
+    "cm_2_qc = summarize_qc(operator, stage, operator_report, operator_meter)\n",
     "\n",
     "# Stage 3\n",
     "stage = 3\n",
     "operator_report = cm_3\n",
-    "cm_3_qc = evaluate_qc(operator, stage, operator_report, operator_meter)\n",
+    "cm_3_qc = summarize_qc(operator, stage, operator_report, operator_meter)\n",
     "\n"
    ],
    "metadata": {
@@ -80,17 +81,17 @@
     "# Stage 1\n",
     "stage = 1\n",
     "operator_report = ghg_1\n",
-    "ghg_1_qc = evaluate_qc(operator, stage, operator_report, operator_meter)\n",
+    "ghg_1_qc = summarize_qc(operator, stage, operator_report, operator_meter)\n",
     "\n",
     "# Stage 2\n",
     "stage = 2\n",
     "operator_report = ghg_2\n",
-    "ghg_2_qc = evaluate_qc(operator, stage, operator_report, operator_meter)\n",
+    "ghg_2_qc = summarize_qc(operator, stage, operator_report, operator_meter)\n",
     "\n",
     "# Stage 3\n",
     "stage = 3\n",
     "operator_report = ghg_2\n",
-    "ghg_3_qc = evaluate_qc(operator, stage, operator_report, operator_meter)\n"
+    "ghg_3_qc = summarize_qc(operator, stage, operator_report, operator_meter)\n"
    ],
    "metadata": {
     "collapsed": false
@@ -109,17 +110,17 @@
     "# Stage 1\n",
     "stage = 1\n",
     "operator_report = kairos_1_ls23\n",
-    "kairos_1_ls23_qc = evaluate_qc(operator, stage, operator_report, operator_meter)\n",
+    "kairos_1_ls23_qc = summarize_qc(operator, stage, operator_report, operator_meter)\n",
     "\n",
     "# Stage 2\n",
     "stage = 2\n",
     "operator_report = kairos_2_ls23\n",
-    "kairos_2_ls23_qc = evaluate_qc(operator, stage, operator_report, operator_meter)\n",
+    "kairos_2_ls23_qc = summarize_qc(operator, stage, operator_report, operator_meter)\n",
     "\n",
     "# Stage 3\n",
     "stage = 3\n",
     "operator_report = kairos_3_ls23\n",
-    "kairos_3_ls23_qc = evaluate_qc(operator, stage, operator_report, operator_meter)"
+    "kairos_3_ls23_qc = summarize_qc(operator, stage, operator_report, operator_meter)"
    ],
    "metadata": {
     "collapsed": false
@@ -138,17 +139,17 @@
     "# Stage 1\n",
     "stage = 1\n",
     "operator_report = kairos_1_ls25\n",
-    "kairos_1_ls25_qc = evaluate_qc(operator, stage, operator_report, operator_meter)\n",
+    "kairos_1_ls25_qc = summarize_qc(operator, stage, operator_report, operator_meter)\n",
     "\n",
     "# Stage 2\n",
     "stage = 2\n",
     "operator_report = kairos_2_ls25\n",
-    "kairos_2_ls25_qc = evaluate_qc(operator, stage, operator_report, operator_meter)\n",
+    "kairos_2_ls25_qc = summarize_qc(operator, stage, operator_report, operator_meter)\n",
     "\n",
     "# Stage 3\n",
     "stage = 3\n",
     "operator_report = kairos_3_ls25\n",
-    "kairos_3_ls25_qc = evaluate_qc(operator, stage, operator_report, operator_meter)"
+    "kairos_3_ls25_qc = summarize_qc(operator, stage, operator_report, operator_meter)"
    ],
    "metadata": {
     "collapsed": false
@@ -271,24 +272,6 @@
     "plt.savefig(fig_path)\n",
     "plt.show()\n"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
