Add overpass times to each daily release plot

--- a/03_parity_plots.ipynb
+++ b/03_parity_plots.ipynb
@@ -35,7 +35,7 @@
     "# Setup\n",
     "\n",
     "# Imports\n",
-    "from plot_methods import plot_parity, select_valid_overpasses\n",
+    "from plot_methods import plot_parity\n",
     "from methods_data_cleaning import load_clean_data, load_meter_data\n",
     "\n",
     "# Load clean operator data\n",
@@ -97,7 +97,6 @@
     "# Info for plotting\n",
     "operator = 'Carbon Mapper'\n",
     "stage = 2\n",
-    "cm_2_plot = select_valid_overpasses(cm_2, cm_meter)\n",
     "\n",
     "# Make parity plot\n",
     "plot_parity(operator, stage, cm_2, cm_meter)"
