Generate clean meter reports for flight radar, Stanford timestamps and operator timestamps.
Each spreadsheet is saved as CSV file in "operator_meter_data", in a folder for the respective timestamps.

--- a/01_meter_data_cleaning.ipynb
+++ b/01_meter_data_cleaning.ipynb
@@ -28,7 +28,6 @@
     "# Imports\n",
     "import pandas as pd\n",
     "import pathlib\n",
-    "from methods_data_cleaning import combine_datetime\n",
     "\n",
     "# Load data\n",
     "\n",
@@ -54,60 +53,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "currently on Carbon Mapper and Flightradar\n",
+      "currently on GHGSat and Flightradar\n",
+      "currently on Kairos and Flightradar\n",
+      "currently on Carbon Mapper and Stanford\n",
+      "currently on GHGSat and Stanford\n",
+      "currently on Kairos and Stanford\n",
+      "currently on Carbon Mapper and team\n",
+      "currently on GHGSat and team\n",
+      "currently on Kairos and team\n",
+      "currently on Carbon Mapper and Flightradar\n",
+      "currently on GHGSat and Flightradar\n",
+      "currently on Kairos and Flightradar\n",
+      "currently on Methane Air and Flightradar\n"
+     ]
+    }
+   ],
    "source": [
+    "from methods_data_cleaning import make_flightradar_operator_dataset\n",
     "\n",
-    "# Default data frames will use the FlightRadar timestamp. Load the data using FlightRadar timestamp\n",
+    "# Cannot currently run Methane Air team, so removing it from the for loop for now\n",
     "\n",
+    "timekeepers = ['flightradar', 'stanford', 'team']\n",
+    "operators = ['Carbon Mapper', 'GHGSat', 'Kairos']\n",
     "\n",
-    "# Relevant columns:\n",
-    "date = 'Date'\n",
-    "time = 'Time (UTC) - from Flightradar'\n",
-    "overpass_id = 'FlightradarOverpassID'\n",
-    "phase_iii = 'PhaseIII' # 0 indicates the overpass was not provided to team in Phase III, 1 indicates it was\n",
-    "kgh_gas_30 = 'Last 30s (kg/h) - whole gas measurement - from Flightradar'\n",
-    "kgh_gas_60 = 'Last 60s (kg/h) - whole gas measurement - from Flightradar'\n",
-    "kgh_gas_90 = 'Last 90s (kg/h) - whole gas measurement - from Flightradar'\n",
-    "kgh_ch4_30 = 'Last 30s (kg/h) - from Flightradar'\n",
-    "kgh_ch4_60 = 'Last 60s (kg/h) - from Flightradar'\n",
-    "kgh_ch4_90 = 'Last 90s (kg/h) - from Flightradar'\n",
-    "methane_fraction = 'Percent methane'\n",
-    "meter = 'Meter' # note renaming meter variable used above\n",
-    "qc_discard = 'Discarded - using Flightradar'\n",
-    "qc_discard_strict = 'Discarded - 1% - using Flightradar'\n",
-    "altitude_meters = 'Average altitude last minute (m)'\n",
+    "# Dictionary of raw meter data\n",
+    "meter_raw = {\n",
+    "    'Carbon Mapper': cm_meter_raw,\n",
+    "    'GHGSat': ghg_meter_raw,\n",
+    "    'Kairos': kairos_meter_raw,\n",
+    "}\n",
+    "\n",
+    "# Generate all datasets and save them\n",
+    "for timekeeper in timekeepers:\n",
+    "    for operator in operators:\n",
+    "        make_flightradar_operator_dataset(operator, meter_raw[operator], timekeeper)\n",
     "\n",
     "\n",
-    "\n",
-    "cm_meter = pd.DataFrame()\n",
-    "\n",
-    "# Populate relevant dataframes\n",
-    "cm_meter['datatime'] = cm_meter_raw.apply(lambda cm_meter_raw:\n",
-    "                                      combine_datetime(cm_meter_raw[date], cm_meter_raw[time]),\n",
-    "                                      axis=1)\n",
-    "cm_meter['overpass_id'] = cm_meter_raw[overpass_id]\n",
-    "cm_meter['phase_iii'] = cm_meter_raw[phase_iii]\n",
-    "cm_meter['kgh_gas_30'] = cm_meter_raw[kgh_gas_30]\n",
-    "cm_meter['kgh_gas_60'] = cm_meter_raw[kgh_gas_60]\n",
-    "cm_meter['kgh_gas_90'] = cm_meter_raw[kgh_gas_90]\n",
-    "cm_meter['kgh_ch4_30'] = cm_meter_raw[kgh_ch4_30]\n",
-    "cm_meter['kgh_ch4_60'] = cm_meter_raw[kgh_ch4_60]\n",
-    "cm_meter['kgh_ch4_90'] = cm_meter_raw[kgh_ch4_90]\n",
-    "cm_meter['methane_fraction'] = cm_meter_raw[methane_fraction]\n",
-    "cm_meter['meter'] = cm_meter_raw[meter]\n",
-    "cm_meter['qc_discard'] = cm_meter_raw[qc_discard]\n",
-    "cm_meter['qc_discard_strict'] = cm_meter_raw[qc_discard_strict]\n",
-    "cm_meter['altitude_meters'] = cm_meter_raw[altitude_meters]\n",
-    "\n",
-    "# Abbreviate meter names in raw meter file\n",
-    "names = ['Baby Coriolis', 'Mama Coriolis', 'Papa Coriolis']\n",
-    "nicknames = ['bc', 'mc', 'pc']\n",
-    "\n",
-    "for meter_name, meter_nickname in zip(names, nicknames):\n",
-    "    cm_meter.loc[cm_meter['meter'] == meter_name, 'meter'] = meter_nickname\n",
-    "\n",
-    "cm_meter.to_csv(pathlib.PurePath('02_meter_data', 'cm_meter.csv'))\n"
+    "cm_meter = make_flightradar_operator_dataset('Carbon Mapper', cm_meter_raw, 'flightradar')\n",
+    "ghg_meter = make_flightradar_operator_dataset('GHGSat', ghg_meter_raw, 'flightradar')\n",
+    "kairos_meter = make_flightradar_operator_dataset('Kairos', kairos_meter_raw, 'flightradar')\n",
+    "mair_meter = make_flightradar_operator_dataset('Methane Air', mair_meter_raw, 'flightradar')\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false
@@ -115,18 +108,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "datatime    datetime64[ns]\ndtype: object"
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "x = ghg_meter_raw['Time (UTC) - from Stanford'][52]\n",
+    "math.isnan(x)"
    ],
-   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "df = pd.DataFrame({\"name\": ['Alfred', 'Batman', 'Catwoman'],\n",
+    "\n",
+    "                   \"toy\": [np.nan, 'Batmobile', 'Bullwhip'],\n",
+    "\n",
+    "                   \"born\": [pd.NaT, pd.Timestamp(\"1940-04-25\"),\n",
+    "\n",
+    "                            pd.NaT]})\n",
+    "\n",
+    "df.dropna(axis='columns')\n",
+    "print(df)"
+   ],
    "metadata": {
     "collapsed": false
    }
