Debug code so that it works with new file structure
All methods are saved in methods_source.py EXCEPT: methods specifically to generate plots, which should be saved in plot_methods and those for cleaning the operator reports, which should be saved in methods_clean_reports

--- a/04_parity_plots.ipynb
+++ b/04_parity_plots.ipynb
@@ -35,20 +35,7 @@
     "# Setup\n",
     "\n",
     "# Imports\n",
-    "from plot_methods import plot_parity\n",
-    "from methods_data_cleaning import load_clean_operator_reports, load_meter_data\n",
-    "\n",
-    "# Load clean operator data\n",
-    "# format for naming: [operator]_stage\n",
-    "\n",
-    "cm_1, cm_2, cm_3, ghg_1, ghg_2, ghg_3, kairos_1_ls23, kairos_1_ls25, kairos_2_ls23, kairos_2_ls25, kairos_3_ls23, kairos_3_ls25 = load_clean_operator_reports()\n",
-    "\n",
-    "# Load meter data\n",
-    "# cm_meter = metered data for Carbon Mapper overpasses\n",
-    "# ghg_meter = metered data for GHGSat overpasses\n",
-    "# kairos_meter = metered data for Kairos overpasses\n",
-    "\n",
-    "cm_meter, ghg_meter, kairos_meter, mair_meter = load_meter_data('flightradar')"
+    "from plot_methods import plot_parity"
    ]
   },
   {
