--- a/02_operator_report_cleaning.ipynb
+++ b/02_operator_report_cleaning.ipynb
@@ -29,7 +29,7 @@
     "# Imports\n",
     "import pandas as pd\n",
     "import pathlib\n",
-    "from methods_cleaning_reports import clean_cm, clean_ghgsat, clean_kairos\n"
+    "from methods_clean_reports import clean_cm, clean_ghgsat, clean_kairos\n"
    ],
    "metadata": {
     "collapsed": false
@@ -87,15 +87,15 @@
    "outputs": [],
    "source": [
     "# Load Carbon Mapper Stage 1\n",
-    "cm_1_path = pathlib.PurePath('00_raw_data', 'CM_Stage1_submitted-2023-01-03.xlsx')\n",
+    "cm_1_path = pathlib.PurePath('00_raw_reports', 'CM_Stage1_submitted-2023-01-03.xlsx')\n",
     "cm_1 = pd.read_excel(cm_1_path, sheet_name='Survey Summary')\n",
     "\n",
     "# Load Carbon Mapper Stage 2\n",
-    "cm_2_path = pathlib.PurePath('00_raw_data', 'CM_Stage2_submitted-2023-02-13.xlsx')\n",
+    "cm_2_path = pathlib.PurePath('00_raw_reports', 'CM_Stage2_submitted-2023-02-13.xlsx')\n",
     "cm_2 = pd.read_excel(cm_2_path, sheet_name='Survey Summary')\n",
     "\n",
     "# Load Carbon Mapper Stage 3\n",
-    "cm_3_path = pathlib.PurePath('00_raw_data', 'CM_Stage3_submitted-2023-02-28.xlsx')\n",
+    "cm_3_path = pathlib.PurePath('00_raw_reports', 'CM_Stage3_submitted-2023-02-28.xlsx')\n",
     "cm_3 = pd.read_excel(cm_3_path, sheet_name='Survey Summary')\n"
    ]
   },
@@ -145,9 +145,9 @@
     "cm_3_clean = clean_cm(cm_report=cm_3, cm_overpasses=total_overpass, cm_stage=stage)\n",
     "\n",
     "# Save data\n",
-    "cm_1_clean.to_csv(pathlib.PurePath('01_clean_data', 'cm_1_clean.csv'))\n",
-    "cm_2_clean.to_csv(pathlib.PurePath('01_clean_data', 'cm_2_clean.csv'))\n",
-    "cm_3_clean.to_csv(pathlib.PurePath('01_clean_data', 'cm_3_clean.csv'))\n"
+    "cm_1_clean.to_csv(pathlib.PurePath('01_clean_reports', 'cm_1_clean.csv'))\n",
+    "cm_2_clean.to_csv(pathlib.PurePath('01_clean_reports', 'cm_2_clean.csv'))\n",
+    "cm_3_clean.to_csv(pathlib.PurePath('01_clean_reports', 'cm_3_clean.csv'))\n"
    ],
    "metadata": {
     "collapsed": false
@@ -185,11 +185,11 @@
    "outputs": [],
    "source": [
     "# GHGSat Stage 1\n",
-    "ghg_1_path = pathlib.PurePath('00_raw_data', 'GHG_Stage1_submitted-2022-11-21.csv')\n",
+    "ghg_1_path = pathlib.PurePath('00_raw_reports', 'GHG_Stage1_submitted-2022-11-21.csv')\n",
     "ghg_1 = pd.read_csv(ghg_1_path)\n",
     "\n",
     "# GHGSat Stage 2\n",
-    "ghg_2_path = pathlib.PurePath('00_raw_data', 'GHG_Stage2_submitted-2022-12-23.csv')\n",
+    "ghg_2_path = pathlib.PurePath('00_raw_reports', 'GHG_Stage2_submitted-2022-12-23.csv')\n",
     "ghg_2 = pd.read_csv(ghg_2_path)"
    ],
    "metadata": {
@@ -242,8 +242,8 @@
     "ghg_2_clean = clean_ghgsat(ghg_report=ghg_2, ghg_overpasses=ghg_overpass, ghg_stage=ghg_stage)\n",
     "\n",
     "# Save data\n",
-    "ghg_1_clean.to_csv(pathlib.PurePath('01_clean_data', 'ghg_1_clean.csv'))\n",
-    "ghg_2_clean.to_csv(pathlib.PurePath('01_clean_data', 'ghg_2_clean.csv'))\n",
+    "ghg_1_clean.to_csv(pathlib.PurePath('01_clean_reports', 'ghg_1_clean.csv'))\n",
+    "ghg_2_clean.to_csv(pathlib.PurePath('01_clean_reports', 'ghg_2_clean.csv'))\n",
     "\n",
     "\n"
    ]
@@ -281,20 +281,20 @@
    "outputs": [],
    "source": [
     "# Kairos Stage 1\n",
-    "kairos_ls23_1_path = pathlib.PurePath('00_raw_data', 'Kairos_Stage1_podLS23_submitted-2022-11-17.csv')\n",
-    "kairos_ls25_1_path = pathlib.PurePath('00_raw_data', 'Kairos_Stage1_podLS25_submitted-2022-11-17.csv')\n",
+    "kairos_ls23_1_path = pathlib.PurePath('00_raw_reports', 'Kairos_Stage1_podLS23_submitted-2022-11-17.csv')\n",
+    "kairos_ls25_1_path = pathlib.PurePath('00_raw_reports', 'Kairos_Stage1_podLS25_submitted-2022-11-17.csv')\n",
     "kairos_ls23_1 = pd.read_csv(kairos_ls23_1_path)\n",
     "kairos_ls25_1 = pd.read_csv(kairos_ls25_1_path)\n",
     "\n",
     "# Kairos Stage 2\n",
-    "kairos_ls23_2_path = pathlib.PurePath('00_raw_data', 'Kairos_Stage2_podLS23_submitted-2022-12-20.csv')\n",
-    "kairos_ls25_2_path = pathlib.PurePath('00_raw_data', 'Kairos_Stage2_podLS25_submitted-2022-12-20.csv')\n",
+    "kairos_ls23_2_path = pathlib.PurePath('00_raw_reports', 'Kairos_Stage2_podLS23_submitted-2022-12-20.csv')\n",
+    "kairos_ls25_2_path = pathlib.PurePath('00_raw_reports', 'Kairos_Stage2_podLS25_submitted-2022-12-20.csv')\n",
     "kairos_ls23_2 = pd.read_csv(kairos_ls23_2_path)\n",
     "kairos_ls25_2 = pd.read_csv(kairos_ls25_2_path)\n",
     "\n",
     "# Kairos Stage 3\n",
-    "kairos_ls23_3_path = pathlib.PurePath('00_raw_data', 'Kairos_Stage3_podLS23_submitted-2023-02-23.csv')\n",
-    "kairos_ls25_3_path = pathlib.PurePath('00_raw_data', 'Kairos_Stage3_podLS25_submitted-2023-02-23.csv')\n",
+    "kairos_ls23_3_path = pathlib.PurePath('00_raw_reports', 'Kairos_Stage3_podLS23_submitted-2023-02-23.csv')\n",
+    "kairos_ls25_3_path = pathlib.PurePath('00_raw_reports', 'Kairos_Stage3_podLS25_submitted-2023-02-23.csv')\n",
     "kairos_ls23_3 = pd.read_csv(kairos_ls23_3_path)\n",
     "kairos_ls25_3 = pd.read_csv(kairos_ls25_3_path)"
    ],
@@ -359,12 +359,12 @@
     "kairos_3_ls25_clean = clean_kairos(kairos_report=kairos_ls25_3, kairos_overpasses=kairos_overpass, kairos_stage=kairos_stage)\n",
     "\n",
     "# Save Data\n",
-    "kairos_1_ls23_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_1_ls23_clean.csv'))\n",
-    "kairos_1_ls25_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_1_ls25_clean.csv'))\n",
-    "kairos_2_ls23_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_2_ls23_clean.csv'))\n",
-    "kairos_2_ls25_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_2_ls25_clean.csv'))\n",
-    "kairos_3_ls23_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_3_ls23_clean.csv'))\n",
-    "kairos_3_ls25_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_3_ls25_clean.csv'))"
+    "kairos_1_ls23_clean.to_csv(pathlib.PurePath('01_clean_reports', 'kairos_1_ls23_clean.csv'))\n",
+    "kairos_1_ls25_clean.to_csv(pathlib.PurePath('01_clean_reports', 'kairos_1_ls25_clean.csv'))\n",
+    "kairos_2_ls23_clean.to_csv(pathlib.PurePath('01_clean_reports', 'kairos_2_ls23_clean.csv'))\n",
+    "kairos_2_ls25_clean.to_csv(pathlib.PurePath('01_clean_reports', 'kairos_2_ls25_clean.csv'))\n",
+    "kairos_3_ls23_clean.to_csv(pathlib.PurePath('01_clean_reports', 'kairos_3_ls23_clean.csv'))\n",
+    "kairos_3_ls25_clean.to_csv(pathlib.PurePath('01_clean_reports', 'kairos_3_ls25_clean.csv'))"
    ],
    "metadata": {
     "collapsed": false
@@ -388,30 +388,6 @@
     "- UncertaintyType: type of uncertainty for upper and lower values reported above\n",
     "- OperatorWindspeed: operator reported windspeed in m/s\n",
     "- QCFlag: operator specific QC flag, first digits indicate operator."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [],
-   "source": [
-    "# Array with column names for clean data\n",
-    "\n",
-    "report_col = ['Operator',\n",
-    "              'Stage',\n",
-    "              'PerformerExperimentID',\n",
-    "              'DateOfSurvey',\n",
-    "              'TimestampUTC',\n",
-    "              'QuantifiedPlume',\n",
-    "              'FacilityEmissionRate',\n",
-    "              'FacilityEmissionRateUpper',\n",
-    "              'FacilityEmissionRateLower',\n",
-    "              'UncertaintyType',\n",
-    "              'OperatorWindspeed',\n",
-    "              'QCFlag']"
    ],
    "metadata": {
     "collapsed": false
@@ -442,12 +418,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# Scientific Aviation data import\n",
     "\n",
-    "sciav_path = pathlib.PurePath('00_raw_data', 'SciAv_Stage1_submitted-2023-02-21.xlsx')\n",
+    "sciav_path = pathlib.PurePath('00_raw_reports', 'SciAv_Stage1_submitted-2023-02-21.xlsx')\n",
     "sciav_1 = pd.read_excel(sciav_path)"
    ],
    "metadata": {
