--- a/03_summarize_results.ipynb
+++ b/03_summarize_results.ipynb
@@ -20,8 +20,7 @@
     "# Setup\n",
     "\n",
     "# imports\n",
-    "from methods_analysis import generate_overpass_summary\n",
-    "from methods_data_cleaning import load_clean_operator_reports, abbreviate_op_name, load_meter_data\n"
+    "from methods_source import generate_overpass_summary, load_clean_operator_reports, abbreviate_op_name, load_meter_data\n"
    ],
    "metadata": {
     "collapsed": false
@@ -303,22 +302,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     overpass_id    overpass_datetime  zero_release  non_zero_release  \\\n",
+      "0            1.0  2022-10-24 16:46:15          True             False   \n",
+      "1            2.0  2022-10-24 16:49:22          True             False   \n",
+      "3            4.0  2022-10-24 16:55:42         False              True   \n",
+      "4            5.0  2022-10-24 16:59:01         False              True   \n",
+      "5            6.0  2022-10-24 17:02:04         False              True   \n",
+      "..           ...                  ...           ...               ...   \n",
+      "327        328.0  2022-10-28 19:31:54         False              True   \n",
+      "333        334.0  2022-10-28 19:51:37         False              True   \n",
+      "336        337.0  2022-10-28 20:01:31         False              True   \n",
+      "343        344.0  2022-10-28 20:23:51         False              True   \n",
+      "346        347.0  2022-10-28 20:33:34         False              True   \n",
+      "\n",
+      "     operator_kept  stanford_kept  phase_iii  pass_all_qc  fail_all_qc  \\\n",
+      "0             True           True          0         True        False   \n",
+      "1             True           True          0         True        False   \n",
+      "3             True           True          1         True        False   \n",
+      "4             True           True          1         True        False   \n",
+      "5             True           True          0         True        False   \n",
+      "..             ...            ...        ...          ...          ...   \n",
+      "327           True           True          1         True        False   \n",
+      "333           True           True          1         True        False   \n",
+      "336           True           True          0         True        False   \n",
+      "343           True           True          0         True        False   \n",
+      "346           True           True          0         True        False   \n",
+      "\n",
+      "     operator_detected  release_rate_kgh  operator_quantification  \\\n",
+      "0                False          0.000000                  0.00000   \n",
+      "1                False          0.000000                  0.00000   \n",
+      "3                 True         17.812255                 17.57448   \n",
+      "4                 True         17.832835                 30.75680   \n",
+      "5                 True        107.863153                119.00672   \n",
+      "..                 ...               ...                      ...   \n",
+      "327               True         57.335358                 83.40800   \n",
+      "333               True         50.461866                 65.88672   \n",
+      "336               True         48.176426                 70.11072   \n",
+      "343               True          9.138694                  7.63560   \n",
+      "346               True        373.114331                468.15424   \n",
+      "\n",
+      "     operator_lower  operator_upper qc_summary  \n",
+      "0               NaN             NaN   pass_all  \n",
+      "1               NaN             NaN   pass_all  \n",
+      "3               NaN             NaN   pass_all  \n",
+      "4               NaN             NaN   pass_all  \n",
+      "5               NaN             NaN   pass_all  \n",
+      "..              ...             ...        ...  \n",
+      "327             NaN             NaN   pass_all  \n",
+      "333             NaN             NaN   pass_all  \n",
+      "336             NaN             NaN   pass_all  \n",
+      "343             NaN             NaN   pass_all  \n",
+      "346             NaN             NaN   pass_all  \n",
+      "\n",
+      "[167 rows x 15 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "valid_overpasses = operator_summary.loc[(operator_summary.qc_summary == 'pass_all') & (operator_summary.operator_quantification.notna())]\n",
     "print(valid_overpasses)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -390,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -464,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "outputs": [],
    "source": [],
    "metadata": {
