--- a/06_daily_release_plots.ipynb
+++ b/06_daily_release_plots.ipynb
@@ -3,10 +3,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Compare Stanford and Operator QC Criteria\n",
+    "# Generate Daily Release Plots\n",
+    "Daily release plots show the\n",
     "Code author: Sahar H. El Abbadi\n",
-    "Date started: 2022-03-02\n",
-    "Date last edited: 2022-03-02"
+    "Date started: 2023-03-08\n",
+    "Date last edited: 2023-03-13"
    ],
    "metadata": {
     "collapsed": false
