Update description of notebook

--- a/06_daily_release_plots.ipynb
+++ b/06_daily_release_plots.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "source": [
     "# Generate Daily Release Plots\n",
-    "Daily release plots show the\n",
-    "Code author: Sahar H. El Abbadi\n",
-    "Date started: 2023-03-08\n",
-    "Date last edited: 2023-03-13"
+    "Daily release plots show the metered release rate over the course of one day of testing. Vertical lines indicate when an operator conducted an overpass, with color indicating how the data collected from that overpass was filtered through both Stanford and operator QC requirements.\n",
+    "- Code author: Sahar H. El Abbadi\n",
+    "- Date started: 2023-03-08\n",
+    "- Date last edited: 2023-03-13"
    ],
    "metadata": {
     "collapsed": false
