Minor tweaks to notebook setup cell

--- a/07_qc_comparison.ipynb
+++ b/07_qc_comparison.ipynb
@@ -22,10 +22,9 @@
     "import pandas as pd\n",
     "import pathlib\n",
     "\n",
-    "# Setup\n",
-    "\n",
     "# Imports\n",
-    "from methods_source import summarize_qc"
+    "from methods_source import summarize_qc\n",
+    "from plot_methods import plot_qc_summary"
    ],
    "metadata": {
     "collapsed": false
@@ -118,8 +117,6 @@
    ],
    "source": [
     "# Make bar pot summarizing QC results\n",
-    "\n",
-    "from plot_methods import plot_qc_summary\n",
     "\n",
     "plot_qc_summary()"
    ],
