Include ToDos for where to add MAIR data when they submit

--- a/01_meter_data_cleaning.ipynb
+++ b/01_meter_data_cleaning.ipynb
@@ -54,33 +54,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# Cannot currently run Methane Air team, so removing it from the for loop for now\n",
     "\n",
     "timekeepers = ['flightradar', 'stanford', 'team']\n",
-    "operators = ['Carbon Mapper', 'GHGSat', 'Kairos']\n",
+    "operators = ['Carbon Mapper', 'GHGSat', 'Kairos', 'MethaneAir']\n",
     "\n",
     "# Dictionary of raw meter data\n",
     "meter_raw = {\n",
     "    'Carbon Mapper': cm_meter_raw,\n",
     "    'GHGSat': ghg_meter_raw,\n",
     "    'Kairos': kairos_meter_raw,\n",
+    "    'MethaneAir': mair_meter_raw,\n",
     "}\n",
     "\n",
     "# Generate all datasets and save them\n",
     "for timekeeper in timekeepers:\n",
     "    for operator in operators:\n",
-    "        make_operator_meter_dataset(operator, meter_raw[operator], timekeeper)\n",
+    "        if operator == 'MethaneAir': #TODO: Add MAIR data here\n",
+    "            pass\n",
+    "        else:\n",
+    "            make_operator_meter_dataset(operator, meter_raw[operator], timekeeper)\n",
     "\n",
     "\n",
     "cm_meter = make_operator_meter_dataset('Carbon Mapper', cm_meter_raw, 'flightradar')\n",
     "ghg_meter = make_operator_meter_dataset('GHGSat', ghg_meter_raw, 'flightradar')\n",
     "kairos_meter = make_operator_meter_dataset('Kairos', kairos_meter_raw, 'flightradar')\n",
+    "#TODO: Add MAIR data here\n",
     "# mair_meter = make_operator_meter_dataset('Methane Air', mair_meter_raw, 'flightradar')\n",
     "\n"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
